# pavement-degradation-ml

./: .gitignore  evaluate.py  main.py  pyproject.toml  train.py
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/services/: predictor.py
frontend/: package-lock.json
frontend/src/: App.jsx
ml/: exception.py
ml/components/: data_ingestion.py  data_transformation.py  model_trainer.py
ml/pipelines/: prediction_pipeline.py  training_pipeline.py
notebooks/: 01_data_ingestion_and_eda.ipynb  02_data_transformation.ipynb  03_model_training_and_evaluation.ipynb  04_linear_regression_regularization.ipynb  05_hyperparameter_tuning.ipynb
src/: utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipelines/: prediction_pipeline.py  training_pipeline.py
