[project]
name = "road-iri-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.10",
    "flask>=3.1.3",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "jupyter>=1.1.1",
    "pytest>=9.1.1",
]
